--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="slider-wrap">
                         <div class="slider-wrapper theme-default">
                             <div id="slider">
-                                <img src="./../img/bg/slider-img.jpg" width="723" height="256" />
+                                <img src="../../img/bg/slider-img.jpg" width="723" height="256" />
                                 <p class="slider-text">The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage. Men lifted the bodies one by one and hurled from them from a bridge into a river below as cursing filled the air</p>
                             </div>
                         </div>
