--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header-bottom"><!-- header-bottom -->
                 <h1>
                     <a href="" class="logo">
-                        <img src="./../img/bg/logo.png" alt="Layman politics" title="Layman politics">
+                        <img src="../img/bg/logo.png" alt="Layman politics" title="Layman politics">
                     </a>
                     <span>blog about politics</span>
                 </h1>
@@ -59,7 +59,7 @@
                 </div>
                 <section class="new-news"><!-- news-brief -->
                     <article>
-                        <a href="#"><img src="./../img/bg/news-brief-img.jpg" alt=""></a>
+                        <a href="#"><img src="./img/bg/news-brief-img.jpg" alt=""></a>
                         <h3><a href="#">CNN could not verify the authenticity</a></h3>
                         <p>The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage.</p>
                         <a href="#" class="comment">12</a>
