--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header-bottom"><!-- header-bottom -->
                 <h1>
                     <a href="" class="logo">
-                        <img src="../../img/bg/logo.png" alt="Layman politics" title="Layman politics">
+                        <img src="./img/bg/logo.png" alt="Layman politics" title="Layman politics">
                     </a>
                     <span>blog about politics</span>
                 </h1>
@@ -51,7 +51,7 @@
                     <div class="slider-wrap">
                         <div class="slider-wrapper theme-default">
                             <div id="slider">
-                                <img src="../img/bg/slider-img.jpg" width="723" height="256" />
+                                <img src="./img/bg/slider-img.jpg" width="723" height="256" />
                                 <p class="slider-text">The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage. Men lifted the bodies one by one and hurled from them from a bridge into a river below as cursing filled the air</p>
                             </div>
                         </div>
@@ -65,19 +65,19 @@
                         <a href="#" class="comment">12</a>
                     </article>
                     <article>
-                        <a href="#"><img src="./../img/bg/news-brief-img2.jpg" alt=""></a>
+                        <a href="#"><img src="./img/bg/news-brief-img2.jpg" alt=""></a>
                         <h3><a href="#">How Much Do You Owe For Lunch? You Decide</a></h3>
                         <p>The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage.</p>
                         <a href="#" class="comment">12</a>
                     </article>
                     <article>
-                        <a href="#"><img src="./../img/bg/news-brief-img3.jpg" alt=""></a>
+                        <a href="#"><img src="./img/bg/news-brief-img3.jpg" alt=""></a>
                         <h3><a href="#">Reid eyes deal to end stalemate over funding</a></h3>
                         <p>The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage.</p>
                         <a href="#" class="comment">12</a>
                     </article>
                     <article>
-                        <a href="#"><img src="./../img/bg/news-brief-img4.jpg" alt=""></a>
+                        <a href="#"><img src="./img/bg/news-brief-img4.jpg" alt=""></a>
                         <h3><a href="#">Wall Street on Debt Deal So What?</a></h3>
                         <p>The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage.</p>
                         <a href="#" class="comment">12</a>
@@ -105,8 +105,8 @@
                             </ul>
                             Share:
                             <ul class="share">
-                                <li><a href="#"><img src="./../img/bg/face.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="./../img/bg/twitter.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./img/bg/face.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./img/bg/twitter.jpg" alt=""></a></li>
                             </ul>
                         </div>
                     </article>
@@ -115,7 +115,7 @@
                             <h2><a href="#">Gruesome video shows Syria brutality</a></h2>
                             <h3>As crackdowns against anti-government protesters continue across</h3>
                         </hgroup>
-                        <a href="#" class="best-new-news-img"><img src="./../img/bg/news-basic-img1.jpg" alt=""></a>
+                        <a href="#" class="best-new-news-img"><img src="./img/bg/news-basic-img1.jpg" alt=""></a>
                         <p>
                             In a case that could test the bounds of free speech, a former Democratic congressman has been allowed to proceed with his lawsuit against a prominent pro-life group that he claims contributed to his election defeat by spreading falsehoods about his record on abortion issues. A federal judge in Ohio ruled Monday that former Rep. Steve Driehaus' defamation suit.
                         </p>
@@ -131,8 +131,8 @@
                             </ul>
                             Share:
                             <ul class="share">
-                                <li><a href="#"><img src="./../img/bg/face.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="./../img/bg/twitter.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./img/bg/face.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./img/bg/twitter.jpg" alt=""></a></li>
                             </ul>
                         </div>
                     </article>
@@ -142,7 +142,7 @@
                 <section class="hottest-video-container"><!-- hottest-video -->
                     <h2>hottest video</h2>
                     <div class="hottest-video">
-                        <a href="#"><img src="./../img/bg/hottest-video1.jpg" alt=""></a>
+                        <a href="#"><img src="./img/bg/hottest-video1.jpg" alt=""></a>
                         <h3><a href="">CNN could not verify the authenticity</a></h3>
                         <p>
                             The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage.
@@ -150,7 +150,7 @@
                         </p>
                     </div>
                     <div class="hottest-video">
-                        <a href="#"><img src="./../img/bg/hottest-video2.jpg" alt=""></a>
+                        <a href="#"><img src="./img/bg/hottest-video2.jpg" alt=""></a>
                         <h3><a href="">Reids eyes deal to end stalemate over funding</a></h3>
                         <p>
                             The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage.
@@ -158,7 +158,7 @@
                         </p>
                     </div>
                     <div class="hottest-video">
-                        <a href="#"><img src="./../img/bg/hottest-video3.jpg" alt=""></a>
+                        <a href="#"><img src="./img/bg/hottest-video3.jpg" alt=""></a>
                         <h3><a href="">CNN could not verify the authenticity</a></h3>
                         <p>
                             The bloodied bodies lay stuffed and tangled in the back of a pickup like garbage.
