--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <h2><a href="#">In Syria, 'brother of a whore' gets tossed like trash</a></h2>
                             <h3>As crackdowns against anti-government protesters</h3>
                         </hgroup>
-                        <a href="#" class="best-new-news-img"><img src="./../img/bg/news-basic-img.jpg" alt=""></a>
+                        <a href="#" class="best-new-news-img"><img src="./img/bg/news-basic-img.jpg" alt=""></a>
                         <p>
                             A federal judge in Ohio ruled Monday that former Rep. Steve Driehaus' defamation suit. In a case that could test the bounds of free speech, a former Democratic congressman has been allowed to proceed with his lawsuit against a prominent pro-life group that he claims contributed to his election defeat by spreading falsehoods about his record on abortion issues.
                         </p>
